installer/k8s-artefacts/global-idp/global-idp.yaml
# Copyright (c) 2018, WSO2 Inc. (http://www.wso2.org) All Rights Reserved.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: idp
spec:
  replicas: 1
  minReadySeconds: 30
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      labels:
        deployment: idp
    spec:
      containers:
      - name: idp
        image: celleryio/wso2is-lightweight 
        livenessProbe:
          exec:
            command:
            - /bin/sh
            - -c
            - nc -z localhost 9443
          initialDelaySeconds: 250
          periodSeconds: 10
        readinessProbe:
          exec:
            command:
              - /bin/sh
              - -c
              - nc -z localhost 9443
          initialDelaySeconds: 250
          periodSeconds: 10
        lifecycle:
          preStop:
            exec:
              command:  ['sh', '-c', '${WSO2_SERVER_HOME}/bin/wso2server.sh stop']
        imagePullPolicy: Always
        securityContext:
          runAsUser: 802
        ports:
        - containerPort: 9763
          protocol: TCP
        - containerPort: 9443
          protocol: TCP
        volumeMounts:
        - name: identity-server-conf
          mountPath: /home/wso2carbon/wso2-config-volume/repository/conf
        - name: identity-server-conf-axis2
          mountPath: /home/wso2carbon/wso2-config-volume/repository/conf/axis2
        - name: identity-server-conf-datasources
          mountPath: /home/wso2carbon/wso2-config-volume/repository/conf/datasources
        - name: identity-server-conf-identity
          mountPath: /home/wso2carbon/wso2-config-volume/repository/conf/identity
#        - name: shared-deployment-persistent-disk
#          mountPath: /home/wso2carbon/wso2is-lightweightv1/repository/deployment
#        - name: shared-tenants-persistent-disk
#          mountPath: /home/wso2carbon/wso2is-lightweightv1/repository/tenants
      serviceAccountName: "cellerysvc-account"
      imagePullSecrets:
      - name: wso2creds
      volumes:
      - name: identity-server-conf
        configMap:
          name: identity-server-conf
      - name: identity-server-conf-axis2
        configMap:
          name: identity-server-conf-axis2
      - name: identity-server-conf-datasources
        configMap:
          name: identity-server-conf-datasources
      - name: identity-server-conf-identity
        configMap:
          name: identity-server-conf-identity
#      - name: shared-deployment-persistent-disk
#        persistentVolumeClaim:
#          claimName: is-shared-deployment-volume-claim
#      - name: shared-tenants-persistent-disk
#        persistentVolumeClaim:
#          claimName: is-shared-tenants-volume-claim
---
apiVersion: v1
kind: Service
metadata:
  name: idp
spec:
  selector:
    deployment: idp
  ports:
  - name: servlet-http
    port: 9763
    targetPort: 9763
    protocol: TCP
  - name: servlet-https
    port: 9443
    targetPort: 9443
    protocol: TCP
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: wso2is-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    nginx.ingress.kubernetes.io/affinity: "cookie"
    nginx.ingress.kubernetes.io/session-cookie-name: "route"
    nginx.ingress.kubernetes.io/session-cookie-hash: "sha1"
spec:
  tls:
  - hosts:
    - idp
  rules:
  - host: idp
    http:
      paths:
      - path: /
        backend:
          serviceName: idp
          servicePort: 9443
